--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">QISpeechToText</string>
+    <string name="tap_to_speak">Tap To Speak</string>
+    <string name="user_speaks">User Speaks</string>
 </resources>
